examples/grpc-backend/grpcbin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin
  labels:
    app: grpcbin
spec:
  selector:
    matchLabels:
      app: grpcbin
  template:
    metadata:
      labels:
        app: grpcbin
    spec:
      containers:
        - name: grpcbin
          image: quay.io/kuadrant/grpcbin@sha256:bd8f2ffdd02d0849fad2d1c754eff4402c867e7a3e0552b8992f4590f5687d20
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: grpcbin
spec:
  selector:
    app: grpcbin
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: 9000
